@@ -10,6 +10,10 @@
 	/* note that we don't wrap fgetpwent_r, since there's no path
 	 * references in it.
 	 */
+	if (!pseudo_pwd) {
+		errno = ENOENT;
+		return -1;
+	}
 	return fgetpwent_r(pseudo_pwd, pwbuf, buf, buflen, pwbufp);
 
 /*	return rc;
